--- a/MVCAndreAirLines/Views/Shared/_Layout.cshtml
+++ b/MVCAndreAirLines/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Aeroportoes" asp-action="Index">Aeroportos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Airports" asp-action="Index">Airports</a>
+                        </li>
                     </ul>
                 </div>
             </div>
